--- a/src/redux/components/Filters/Filters.css
+++ b/src/redux/components/Filters/Filters.css
@@ -18,6 +18,20 @@
     width: 100%;
 }
 
+.filterSelect {
+    background: #F4F6F7;
+    border-radius: 3px;
+    border: none;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    color: #000000;
+    text-transform: capitalize;
+    padding: 10px;
+    margin-right: 10px;
+    min-width: 120px
+}
+
 #filtersSubmit {
     position: absolute;
     padding: 10px 60px;
@@ -35,17 +49,18 @@
 }
 
 #filtersContainer img {
-    width: 22px;
-    height: 22px;
+    width: 20px;
+    height: 20px;
     background: transparent;
     border: none;
-    filter: invert(1);
+    filter: invert(80%) sepia(11%) saturate(304%) hue-rotate(169deg) brightness(88%) contrast(87%);
 }
 
 #searchContainer {
+    flex-grow: 1;
     display: flex;
-    background: #5C5C5C;
-    padding: 5px 10px;
+    background: #F4F6F7;
+    padding: 10px;
     border-radius: 5px;
 }
 
@@ -54,9 +69,28 @@
     background: transparent;
     border: none;
     font-size: 14px;
-    color: #ffffff;
+    color: #000000;
     margin-left: 5px;
 }
+
+
+.filterSlider {
+    flex-grow: 1;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-transform: capitalize;
+}
+
+.filterSlider span {
+    background: #F4F6F7;
+    padding: 5px 20px;
+    border-radius: 5px;
+}
+
+/*   oldddd */
+
+
 
 #shippingFilterContainer {
     display: flex;
