--- a/src/redux/components/Navbar/Navbar.css
+++ b/src/redux/components/Navbar/Navbar.css
@@ -2,17 +2,20 @@
     position: fixed;
     top: 0;left: 0;
     width: 100%;
-    height: 80px;
+    height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: #F4F6F7;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.164);
+    z-index: 2;
 }
 
 #navbar h1 {
     font-weight: 500;
     font-size: 30px;
     line-height: 35px;
-    color: #1C1C1C;
+    color: #30394e;
     padding-left: 20px;
 }
 
@@ -21,8 +24,7 @@
 }
 
 #navbar img {
-    width: 26px;
-    height: 26px;
-    filter: invert(0.35);
+    width: 22px;
+    height: 22px;
     margin: 0 5px;
 }
