--- a/src/redux/components/Navbar/Navbar.css
+++ b/src/redux/components/Navbar/Navbar.css
@@ -19,12 +19,21 @@
     padding-left: 20px;
 }
 
-#navbar div {
+#navLinks {
     padding-right: 20px;
+    display: flex;
 }
 
 #navbar img {
     width: 22px;
     height: 22px;
     margin: 0 5px;
+}
+
+#productPagePrice {
+    margin: 0;
+}
+
+#productPagePrice span {
+    font-weight: 600;
 }
