--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@ body {
   font-family: sans-serif;
   transition-duration: 0.5s;
   background: #FAFAFA;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
