--- a/src/redux/containers/Product/Product.css
+++ b/src/redux/containers/Product/Product.css
@@ -1,10 +1,11 @@
 #productPageContainer {
     position: absolute;
-    top: 0;left: 0;right: 0;bottom: 0;
+    top: 80px;left: 0;right: 0;bottom: 0;
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -54,6 +55,8 @@
     height: auto;
     margin: 10px 5px;
     cursor: pointer;
+    border: 2px solid black;
+    border-radius: 3px;
 }
 
 #productPageImage {
