--- a/src/redux/components/CartItem/CartItem.css
+++ b/src/redux/components/CartItem/CartItem.css
@@ -34,7 +34,7 @@
 }
 
 .cartItemDiv input {
-    width: 30px;
+    width: 50px;
     border: none;
     background: #F4F6F7;
     padding: 5px;
@@ -47,4 +47,12 @@
 }
 .cartItemInfo p {
     flex-grow: 1;
+}
+
+#removeItem {
+    background: transparent;
+    border: none;
+    font-weight: 500;
+    font-size: 21px;
+    color: #525252;
 }
