--- a/src/redux/components/ProductCard/ProductCard.css
+++ b/src/redux/components/ProductCard/ProductCard.css
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 #productCardImage {
@@ -72,4 +72,13 @@
     line-height: 21px;
 
     color: #000000;
+}
+
+#timeContainer {
+    text-decoration: none;
+    color: #000000;
+    text-align: left;
+    width: 90%;
+    margin-bottom: 0;
+    font-weight: 600;
 }
