--- a/src/redux/components/Filters/Filters.css
+++ b/src/redux/components/Filters/Filters.css
@@ -46,6 +46,7 @@
     font-size: 18px;
     line-height: 21px;
     color: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 #filtersContainer img {
