--- a/src/redux/components/Filters/Filters.css
+++ b/src/redux/components/Filters/Filters.css
@@ -85,8 +85,10 @@
 
 .filterSlider span {
     background: #F4F6F7;
-    padding: 5px 20px;
+    padding: 5px;
     border-radius: 5px;
+    width: 30px;
+    margin: 0 10px;
 }
 
 /*   oldddd */
